Trying to port to 1.19.2