@@ -2,7 +2,6 @@ package io.ticticboom.mods.mm.datagen.gen;
 
 import io.ticticboom.mods.mm.Ref;
 import io.ticticboom.mods.mm.block.ControllerBlock;
-import io.ticticboom.mods.mm.block.PortBlock;
 import io.ticticboom.mods.mm.ports.base.IPortBlock;
 import io.ticticboom.mods.mm.setup.MMRegistries;
 import net.minecraft.data.DataGenerator;
@@ -13,8 +12,6 @@ import net.minecraftforge.client.model.generators.ModelFile;
 import net.minecraftforge.common.data.ExistingFileHelper;
 import net.minecraftforge.registries.RegistryObject;
 
-import java.util.stream.Collectors;
-
 public class MMItemModelProvider extends ItemModelProvider {
     public MMItemModelProvider(DataGenerator generator, ExistingFileHelper existingFileHelper) {
         super(generator, Ref.ID, existingFileHelper);
@@ -22,8 +19,8 @@ public class MMItemModelProvider extends ItemModelProvider {
 
     @Override
     protected void registerModels() {
-        var controllers = MMRegistries.BLOCKS.getEntries().stream().filter(x -> x.get() instanceof ControllerBlock).collect(Collectors.toList());
-        var ports = MMRegistries.BLOCKS.getEntries().stream().filter(x -> x.get() instanceof IPortBlock).collect(Collectors.toList());
+        var controllers = MMRegistries.BLOCKS.getEntries().stream().filter(x -> x.get() instanceof ControllerBlock).toList();
+        var ports = MMRegistries.BLOCKS.getEntries().stream().filter(x -> x.get() instanceof IPortBlock).toList();
 
         for (RegistryObject<Block> controller : controllers) {
             if (!controller.isPresent()) {
@@ -36,9 +33,9 @@ public class MMItemModelProvider extends ItemModelProvider {
             this.getBuilder(port.getId().toString()).parent(new ModelFile.UncheckedModelFile(new ResourceLocation(port.getId().getNamespace(), "block/" + port.getId().getPath())));
         }
 
-        this.getBuilder(MMRegistries.BLUEPRINT.get().getRegistryName().getPath()).parent(new ModelFile.UncheckedModelFile("item/generated"))
+        this.getBuilder(MMRegistries.BLUEPRINT.getId().getPath()).parent(new ModelFile.UncheckedModelFile("item/generated"))
                 .texture("layer0", Ref.res("item/blueprint"));
-        this.getBuilder(MMRegistries.STRUCTURE_GEN_WAND.get().getRegistryName().getPath()).parent(new ModelFile.UncheckedModelFile("item/generated"))
+        this.getBuilder(MMRegistries.STRUCTURE_GEN_WAND.getId().getPath()).parent(new ModelFile.UncheckedModelFile("item/generated"))
                 .texture("layer0", Ref.res("item/scanning_tool"));
     }
 }
